@@ -35,6 +35,7 @@ exclude_filename = LICENSE
 [CPANFile]
 
 [Prereqs]
+Carp          = 0
 Mojolicious   = 5.70
 IO::Epoll     = 0.03
 perl          = 5.010001
