@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Updated again and watch methods to croak on inactive timers
 
 0.002     2015-02-23 14:00:11-05:00 America/New_York
   - Remove deprecated is_readable method from tests
